--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
                     <h2>Professionelle Transportlösungen für Ihre Mobilität</h2>
                     <p>In der heutigen schnelllebigen Welt ist zuverlässige Mobilität wichtiger denn je. Ob für Geschäftsreisen, Flughafentransfers oder besondere Anlässe – professionelle Fahrdienste bieten die Flexibilität und Sicherheit, die moderne Reisende benötigen. Die Wahl des richtigen Transportpartners kann den Unterschied zwischen Stress und Entspannung ausmachen.</p>
                     
-                    <p>Ein qualifizierter <a href="https://interdrivers.be/" target="_blank" rel="noopener">inter driver</a> versteht die individuellen Bedürfnisse seiner Kunden und bietet maßgeschneiderte Lösungen für jede Situation. Von der pünktlichen Abholung bis zur sicheren Ankunft am Zielort – jeder Aspekt des Service wird mit größter Sorgfalt durchgeführt. Die Professionalität zeigt sich nicht nur in der Fahrkunst, sondern auch in der Serviceorientierung und dem Engagement für Kundenzufriedenheit.</p>
+                    <p>Ein qualifizierter <a href="https://interdrivers.be/" target="_blank" rel="noopener">chauffeur Bruxelles</a> versteht die individuellen Bedürfnisse seiner Kunden und bietet maßgeschneiderte Lösungen für jede Situation. Von der pünktlichen Abholung bis zur sicheren Ankunft am Zielort – jeder Aspekt des Service wird mit größter Sorgfalt durchgeführt. Die Professionalität zeigt sich nicht nur in der Fahrkunst, sondern auch in der Serviceorientierung und dem Engagement für Kundenzufriedenheit.</p>
 
                     <p>Die Transportbranche in Belgien hat sich in den letzten Jahren erheblich weiterentwickelt. Moderne Technologien, strenge Sicherheitsstandards und ein wachsendes Bewusstsein für Servicequalität haben die Erwartungen der Kunden deutlich erhöht. Professionelle Anbieter investieren kontinuierlich in die Schulung ihrer Fahrer, die Wartung ihrer Fahrzeugflotte und die Verbesserung ihrer Dienstleistungen.</p>
                 </section>
@@ -663,3 +663,4 @@
     </footer>
 </body>
 </html>
+
